# art_gen_2022

./: CMakeLists.txt  PerlixPixelShader.glsl  PixelShader.glsl  README.md  VertexShader.glsl  fractal_generator.cpp  fractal_generator.h  header.h  main.cpp  random_generator.cpp  random_generator.h
